// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component Just one Text 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Just one Text
</message>
`;

exports[`Text Component Text with 1 button 1`] = `
<message
  delay={0}
  markdown={1}
  type="text"
  typing={0}
>
  Text with 1 button
  <button
    payload="payload1"
  >
    Text 1
  </button>
</message>
`;
